--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -19,3 +19,28 @@
 .usermotto {
   margin-top: 200px;
 }
+
+.slider-mask {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%
+}
+
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: lightseagreen;
+  color: #fff;
+  width: 40%;
+  height: 100%;
+}
+
+.slider text {
+  display: block;
+}
